[package]
name = "drogue-embedded-timer"
version = "0.2.3"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Macro to shim heterogeneous HAL timers to embedded-time"
repository = "https://github.com/drogue-iot/drogue-embedded-timer"
keywords = [ "embedded-time", "no_std", "cortex-m" ]
categories = ["embedded", "no-std"]

[dependencies]
embedded-time = "0.10.0"
embedded-hal = "1.0.0-alpha.6"
cortex-m = "0.6"
